syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "DeviceStateModel";

import "sitewhere-common.proto";

// ####################
// ### DEVICE STATE ###
// ####################

// Request for creating device state.
message GDeviceStateCreateRequest {
	GUUID deviceId = 1;
	GUUID deviceTypeId = 2;
	GUUID deviceAssignmentId = 3;
	GUUID customerId = 4;
	GUUID areaId = 5;
	GUUID assetId = 6;
	uint64 lastInteractionDate = 7;
	uint64 presenceMissingDate = 8;
	GUUID lastLocationEventId = 9;
	map<string, GUUID> lastMeasurementEventIds = 10;
	map<string, GUUID> lastAlertEventIds = 11;
}

// Criteria for searching device states.
message GDeviceStateSearchCriteria {
	uint64 lastInteractionDateBefore = 1;
	repeated GUUID deviceTypeId = 2;
	repeated GUUID customerId = 3;
	repeated GUUID areaId = 4;
	repeated GUUID assetId = 5;
	int32 pageNumber = 6;
	int32 pageSize = 7;
}

// Results for device state search.
message GDeviceStateSearchResults {
	uint64 count = 1;
	repeated GDeviceState deviceStates = 2;
}

// Device state.
message GDeviceState {
	GUUID id = 1;
	GUUID deviceId = 2;
	GUUID deviceTypeId = 3;
	GUUID deviceAssignmentId = 4;
	GUUID customerId = 5;
	GUUID areaId = 6;
	GUUID assetId = 7;
	uint64 lastInteractionDate = 8;
	uint64 presenceMissingDate = 9;
	GUUID lastLocationEventId = 10;
	map<string, GUUID> lastMeasurementEventIds = 11;
	map<string, GUUID> lastAlertEventIds = 12;
}
